--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -10,4 +10,4 @@ apply = "0.2.2"
 clap = "2.32.0"
 log = "0.4.6"
 env_logger = "0.6.0"
-serde = "1.0.85"
+serde = {version="1.0.85", features=["derive"]}
