--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -11,3 +11,5 @@ clap = "2.32.0"
 log = "0.4.6"
 env_logger = "0.6.0"
 serde = {version="1.0.85", features=["derive"]}
+db = {path="../db"}
+uuid = "0.6.*"
