--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -13,3 +13,5 @@ env_logger = "0.6.0"
 serde = {version="1.0.85", features=["derive"]}
 db = {path="../db"}
 uuid = "0.6.*"
+serde_json = "1.0.37"
+frank_jwt = "3.1.0"
