--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "swen344-web-project",
-  "version": "1.0.0",
-  "description": "Web project for swen-344",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "test",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hgzimmerman/SWEN344-web-project.git"
-  },
-  "author": "swen-344 team",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hgzimmerman/SWEN344-web-project/issues"
-  },
-  "homepage": "https://github.com/hgzimmerman/SWEN344-web-project#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "react": "^16.7.0",
-    "webpack": "^4.29.0"
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3"
   },
-  "devDependencies": {
-    "webpack-cli": "^3.2.1"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
