--- a/backend/wasm_calls/Cargo.toml
+++ b/backend/wasm_calls/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen-futures = "0.3.10"
 serde = { version = "1.0.80", features = ["derive"] }
 serde_derive = "^1.0.59"
 serde_json = "1.0.37"
+uuid = {version="0.6.*", features=["serde"]}
 
 
 [dependencies.web-sys]
@@ -26,4 +27,5 @@ features = [
   'RequestMode',
   'Response',
   'Window',
+  'console'
 ]
