--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -12,8 +12,11 @@ log = "0.4.6"
 env_logger = "0.6.0"
 serde = {version="1.0.85", features=["derive"]}
 db = {path="../db"}
+testing_common = {path="../testing_common"}
 uuid = {version = "0.6.*", features=["v4"]}
 serde_json = "1.0.37"
 frank_jwt = "3.1.0"
 chrono = "0.4.6"
 diesel = "1.4.1"
+bytes = "0.4.11"
+
