moved pool to its own crate

--- a/backend/db/Cargo.toml
+++ b/backend/db/Cargo.toml
@@ -13,3 +13,4 @@ chrono = {version = "0.4.*", features=["serde"]}
 serde = {version="1.0.85", features=["derive"]}
 itertools = "0.8.0"
 
+pool = {path="../pool"}
