--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -20,6 +20,7 @@ chrono = "0.4.6"
 diesel = "1.4.1"
 bytes = "0.4.11"
 pool = {path="../pool"}
+auth = {path = "../auth"}
 hyper = "0.12.23"
 futures = "0.1.25"
 
