--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -15,7 +15,7 @@ db = {path="../db"}
 testing_common = {path="../testing_common"}
 uuid = {version = "0.6.*", features=["v4"]}
 serde_json = "1.0.37"
-frank_jwt = "3.1.0"
+#frank_jwt = "3.1.0"
 chrono = "0.4.6"
 diesel = "1.4.1"
 bytes = "0.4.11"
