--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -15,11 +15,12 @@ db = {path="../db"}
 testing_common = {path="../testing_common"}
 uuid = {version = "0.6.*", features=["v4"]}
 serde_json = "1.0.37"
-frank_jwt = "3.1.0"
+#frank_jwt = "3.1.0"
 chrono = "0.4.6"
 diesel = "1.4.1"
 bytes = "0.4.11"
 pool = {path="../pool"}
+auth = {path = "../auth"}
 hyper = "0.12.23"
 futures = "0.1.25"
 
