--- a/backend/auth/Cargo.toml
+++ b/backend/auth/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "auth"
+name = "authorization"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
