--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -3,6 +3,7 @@ name = "server"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
 warp = "0.1.11"
