--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
 license = "MIT"
 
+[[bin]]
+name = "server_bin"
+path = "src/main.rs"
+
 [dependencies]
 warp = {version="0.1.13", features=["tls"]}
 apply = "0.2.2"
