--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -3,9 +3,14 @@ name = "server"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
+license = "MIT"
+
+[[bin]]
+name = "server_bin"
+path = "src/main.rs"
 
 [dependencies]
-warp = "0.1.11"
+warp = {version="0.1.13", features=["tls"]}
 apply = "0.2.2"
 clap = "2.32.0"
 log = "0.4.6"
