more work getting the backend working as intended

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,10 @@ FROM rustlang/rust:nightly
 
 RUN cargo install diesel_cli --no-default-features --features postgres
 
-RUN cargo install cargo-watch
+#RUN cargo install cargo-watch
 
 WORKDIR /usr/src/app
 
-EXPOSE 3001
+EXPOSE 8080
 
 VOLUME ["/usr/local/cargo"]
