--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3"
 
 services:
-#  web:
-#    build: ./web
-#    volumes:
-#      - ./web:/usr/src/app
+  frontend:
+    build: ./frontend
+    volumes:
+      - ./frontend:/usr/src/app
 #    ports:
 #      - "3000:3000"
 #    command: bash -c "npm && npm start"
-#    links:
-#      - api_server
+    command: bash -c "npm install && npm build"
+    links:
+      - backend
 
   backend:
     build: ./backend
@@ -28,8 +29,7 @@ services:
     # diesel infer_schema macro gives warnings with this flag.
     # environment:
     #   - CARGO_INCREMENTAL=1
-    command: bash -c "bash ./wait_for_it.sh db:5432 -q -- diesel setup --migration-dir db/migrations && cargo watch -x run"
-#    command: bash -c "bash ./wait_for_it.sh db:5432 -q -- cargo watch -x run"
+    command: bash -c "bash ./wait_for_it.sh db:5432 -q -- diesel setup --migration-dir db/migrations && cargo run --release"
 
   db:
     image: "postgres:latest"
