--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "canvasjs": "^1.8.1",
     "install": "^0.12.2",
     "npm": "^6.7.0",
     "react": "^16.7.0",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.7.0",
+    "react-facebook-login": "^4.1.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
