--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,15 @@
     "@material-ui/icons": "^3.0.2",
     "canvasjs": "^1.8.1",
     "install": "^0.12.2",
+    "moment": "^2.24.0",
     "npm": "^6.7.0",
     "react": "^16.7.0",
+    "react-big-calendar": "^0.20.3",
     "react-calendar": "^2.18.1",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.7.0",
-<<<<<<< HEAD
     "react-facebook-login": "^4.1.1",
     "react-loader-spinner": "^2.3.0",
-=======
->>>>>>> 8260ea595b66949fe44859d17a7afb5ae07d1fa8
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
