--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "canvasjs": "^1.8.1",
+    "install": "^0.12.2",
+    "moment": "^2.24.0",
+    "npm": "^6.7.0",
     "react": "^16.7.0",
+    "react-big-calendar": "^0.20.3",
+    "react-calendar": "^2.18.1",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.7.0",
+    "react-facebook-login": "^4.1.1",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
