--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react-facebook-login": "^4.1.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
