some misc changes

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name vm344c.se.rit.edu;
+    server_name 0.0.0.0:8080;
 
     location / {
         return 301 https://$host$request_uri;
@@ -12,7 +12,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name vm344c.se.rit.edu;
+    server_name 0.0.0.0:8080;
     ssl_certificate /etc/letsencrypt/live/vm344c.se.rit.edu/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vm344c.se.rit.edu/privkey.pem;
 
