--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 0.0.0.0:8080;
+    server_name vm344c.se.rit.edu;
 
     location / {
         return 301 https://$host$request_uri;
@@ -12,7 +12,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name 0.0.0.0:8080;
+    server_name vm344c.se.rit.edu;
     ssl_certificate /etc/letsencrypt/live/vm344c.se.rit.edu/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vm344c.se.rit.edu/privkey.pem;
 
@@ -20,6 +20,6 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://vm344c.se.rit.edu; #for demo purposes
+        proxy_pass http://vm344c.se.rit.edu:8080; #for demo purposes
     }
 }
