set postgres to 11 in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     command: bash -c "bash ./build.sh"
 
   db:
-    image: "postgres:latest"
+    image: "postgres:11"
     ports: 
       - "5432:5432"
     volumes:
