--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -20,6 +20,6 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://vm344c.se.rit.edu; #for demo purposes
+        proxy_pass http://vm344c.se.rit.edu:8080; #for demo purposes
     }
 }
