--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -32,4 +32,6 @@ tokio = "0.1.15"
 rand = "0.6.5"
 serde_urlencoded = "0.5.4"
 bf = {path="../bf"}
+egg-mode = {git = "https://github.com/QuietMisdreavus/twitter-rs", commit = "8491554282f5e8a43f9144208198b756ce5ed07a"}
+tokio-core = "0.1.17"
 
