--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -32,6 +32,7 @@ tokio = "0.1.15"
 rand = "0.6.5"
 serde_urlencoded = "0.5.4"
 bf = {path="../bf"}
-egg-mode = {git = "https://github.com/QuietMisdreavus/twitter-rs", commit = "8491554282f5e8a43f9144208198b756ce5ed07a"}
+egg-mode = {git = "https://github.com/QuietMisdreavus/twitter-rs", rev = "8491554282f5e8a43f9144208198b756ce5ed07a"}
 tokio-core = "0.1.17"
+askama = "0.8.0"
 
