added production vs dev redirects for twitter login

--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -9,6 +9,12 @@ license = "MIT"
 name = "server_bin"
 path = "src/main.rs"
 
+
+[features]
+
+default = []
+production = []
+
 [dependencies]
 warp = {version="0.1.13", features=["tls"]}
 apply = "0.2.2"
