--- a/backend/selenium/Cargo.toml
+++ b/backend/selenium/Cargo.toml
@@ -2,6 +2,7 @@
 name = "selenium"
 version = "0.1.0"
 authors = ["JKingSE <jfk1307@g.rit.edu>"]
+edition = "2018"
 
 [dependencies]
 selenium-rs = "0.1.0"
